# fashion-reviews-pyspark

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
data/raw/: README.md
data/tableau/: helpfulness_by_price_tier.csv  helpfulness_by_rating.csv  helpfulness_by_text_length.csv  photo_impact.csv  rating_by_verified.csv  temporal_trends.csv  yearly_satisfaction.csv
notebooks/: analysis.ipynb
src/: analysis.py  config.py  data_loader.py  evaluation.py  export_tableau_data.py  preprocessing.py  spark_session.py  text_pipeline.py  visualization.py
tests/: conftest.py  test_analysis.py  test_data_loader.py  test_evaluation.py  test_preprocessing.py  test_text_pipeline.py  test_visualization.py
